--- a/Run.html
+++ b/Run.html
@@ -10,7 +10,7 @@
     <img src="Images/Alien.jpg" alt="Alien" width="700px"/>
     <p>"Alien World" by <a
                            href="https://pixabay.com/p-2038604/?no_redirect">Pixabay</a>. Licensed under CC by 2.0</p>
-    <p>If you want to start over. Click Here---><a href="Index.html">Start Over</a></p>
+    <p>If you want to start over. Click Here---><a href="index.html">Start Over</a></p>
     
     
     </body>
