--- a/StayinBed.html
+++ b/StayinBed.html
@@ -7,10 +7,10 @@
         <body>
             <h1>You Chose To Stay in Your Bed!</h1>
             <p> You decided that the noise wasn't as important to lose sleep over. So you set your alarm and go back to sleep.</p>
-    <img src="Images/Bed.jpg" alt="Close up of a bed" width="700px"/>
+    <img src="images/bed.jpg" alt="Close up of a bed" width="700px"/>
               <p>“My bed” by <a 
                                 href="https://www.flickr.com/photos/charlesonflickr/363952521">Charles Williams</a>. Is licensed under CC by 2.0 </p>
-            <p>This is the end of "The Majestic Journey". If you want to start over. Click Here---><a href="Index.html">Start Over</a></p>
+            <p>This is the end of "The Majestic Journey". If you want to start over. Click Here---><a href="index.html">Start Over</a></p>
     </body>
 
 </html>
